--- a/mandelbulber2/formula/ui/transf_spherical_inv.ui
+++ b/mandelbulber2/formula/ui/transf_spherical_inv.ui
@@ -38,6 +38,13 @@ often used as a pre-transform</string>
     </widget>
    </item>
    <item>
+    <widget class="MyCheckBox" name="checkBox_transf_function_enabledy_false">
+     <property name="text">
+      <string>pre dot()</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QGridLayout" name="gridLayout_16" columnstretch="0,0,1">
      <property name="spacing">
       <number>2</number>
@@ -73,7 +80,7 @@ often used as a pre-transform</string>
      <item row="0" column="0" rowspan="3">
       <widget class="QLabel" name="label_15">
        <property name="text">
-        <string>Spherical folding
+        <string>reverse
 offset:</string>
        </property>
       </widget>
@@ -97,7 +104,7 @@ offset:</string>
      <item row="3" column="0">
       <widget class="QLabel" name="label_18">
        <property name="text">
-        <string>Pre Scale:</string>
+        <string>pre Scale:</string>
        </property>
       </widget>
      </item>
@@ -239,7 +246,7 @@ offset:</string>
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Adjusts the DE every time this slot is iterated.&lt;/p&gt;&lt;p&gt;The aim is to keep these parameters as low as possible.&lt;/p&gt;&lt;p&gt;High values improve the DE, but detail is lost.&lt;/p&gt;&lt;p&gt;Occasionally a negative Offset value is used. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="title">
-      <string>Conditional M&amp;odes</string>
+      <string>conditional m&amp;odes</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -268,7 +275,7 @@ offset:</string>
         <item row="4" column="1">
          <widget class="QLabel" name="label_47">
           <property name="text">
-           <string>MinimumR:</string>
+           <string>minRR:</string>
           </property>
          </widget>
         </item>
@@ -310,7 +317,7 @@ offset:</string>
         <item row="3" column="1">
          <widget class="QLabel" name="label_16">
           <property name="text">
-           <string>MaximumR:</string>
+           <string>maxRR:</string>
           </property>
          </widget>
         </item>
@@ -324,8 +331,8 @@ offset:</string>
         <item row="0" column="2">
          <widget class="QLabel" name="label_22">
           <property name="text">
-           <string>if (  MinimumR  &lt; rr &lt; MaximumR)  z *=1 / rr;
-if ( z &gt; MinumumR) z *= 1/  rrMode</string>
+           <string>if (  minRR  &lt; rr &lt; maxRR)  z *=1 / rr;
+if ( z &gt; minRR) z *= 1/  rrMode</string>
           </property>
          </widget>
         </item>
@@ -367,7 +374,7 @@ if ( z &gt; MinumumR) z *= 1/  rrMode</string>
         <item row="2" column="2">
          <widget class="QLabel" name="label_48">
           <property name="text">
-           <string>rrMode = 2 * MinimumR - rr (non conformal &quot;reversal&quot; inversion)</string>
+           <string>rrMode = 2 * minRR - rr (non conformal &quot;reversal&quot; inversion)</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -377,7 +384,7 @@ if ( z &gt; MinumumR) z *= 1/  rrMode</string>
         <item row="1" column="2">
          <widget class="QLabel" name="label_21">
           <property name="text">
-           <string>rrMode = MinimumR (conformal - undo the inversion inside a sphere)</string>
+           <string>rrMode = minRR (conformal - undo the inversion inside a sphere)</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -394,7 +401,7 @@ if ( z &gt; MinumumR) z *= 1/  rrMode</string>
         <item row="1" column="0">
          <widget class="QLabel" name="label_257">
           <property name="text">
-           <string>Mode Offset:</string>
+           <string>mode offset:</string>
           </property>
          </widget>
         </item>
@@ -516,7 +523,7 @@ if ( z &gt; MinumumR) z *= 1/  rrMode</string>
      <item row="1" column="0">
       <widget class="QLabel" name="label_256">
        <property name="text">
-        <string>Post Offset:</string>
+        <string>post offset:</string>
        </property>
       </widget>
      </item>
@@ -633,7 +640,7 @@ if ( z &gt; MinumumR) z *= 1/  rrMode</string>
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Adjusts the DE every time this slot is iterated.&lt;/p&gt;&lt;p&gt;The aim is to keep these parameters as low as possible.&lt;/p&gt;&lt;p&gt;High values improve the DE, but detail is lost.&lt;/p&gt;&lt;p&gt;Occasionally a negative Offset value is used. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="title">
-      <string>Analytic D&amp;E extra controls</string>
+      <string>D&amp;E extra controls</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -726,6 +733,86 @@ if ( z &gt; MinumumR) z *= 1/  rrMode</string>
          <widget class="QLabel" name="label_182">
           <property name="text">
            <string>scale1:</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="MyGroupBox" name="groupCheck_fold_color_aux_color_enabled_false">
+     <property name="title">
+      <string>aux color components</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_10">
+      <property name="leftMargin">
+       <number>2</number>
+      </property>
+      <property name="topMargin">
+       <number>2</number>
+      </property>
+      <property name="rightMargin">
+       <number>2</number>
+      </property>
+      <property name="bottomMargin">
+       <number>2</number>
+      </property>
+      <item>
+       <layout class="QGridLayout" name="gridLayout_17" columnstretch="0,0">
+        <property name="spacing">
+         <number>2</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_34">
+          <property name="text">
+           <string>RR:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_45">
+          <property name="text">
+           <string>MinR2:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_0">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="prefix">
+           <string/>
+          </property>
+          <property name="suffix">
+           <string/>
+          </property>
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-100.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>100.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_44">
+          <property name="text">
+           <string>MaxR2</string>
           </property>
          </widget>
         </item>
